--- a/.gitignore
+++ b/.gitignore
@@ -57,7 +57,7 @@ private_key.pepk
 
 ### Gradle ###
 .gradle
-build/
+app/build/
 
 # Ignore Gradle GUI config
 gradle-app.setting
@@ -129,7 +129,7 @@ hs_err_pid*
 # Gradle
 .idea/**/gradle.xml
 .idea/**/libraries
-
+.idea/*
 # Gradle and Maven with auto-import
 # When using Gradle or Maven with auto-import, you should exclude module files,
 # since they will be recreated, and may cause churn.  Uncomment if using
